<resources>
    <string name="app_name">FirebaseMatching</string>
    <!--Common-->
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="empty"></string>
    <!--RecyclerView -->
    <string name="title_recycler_view">RecyclerView</string>
    <!--ViewPager -->
    <string name="title_view_pager">ViewPager</string>
    <!--Firestore -->
    <string name="title_chat_rooms">ChatRooms</string>
    <string name="make_chat_rooms">チャットルーム作成</string>
    <string name="enter_chat_room_name">ルーム名を入れてください</string>
    <string name="make_message">メッセージを入力</string>
    <!-- okHttp3 -->
    <string name="title_ok_http">okHttp</string>
    <string name="network_error_dialog_title">通信エラー</string>
    <string name="network_error_dialog_message">通信状況が良い場所でもう一度お試しください。</string>
    <!--location-->
    <string name="title_location">Location</string>
    <string name="check_button">check</string>
    <string name="maker_button">Maker</string>
    <string name="move_google_setting_dialog_title">位置情報をオンにしてください。</string>
    <!-- RegisterLogin -->
    <string name="login_title">ログイン</string>
    <string name="register_title">会員登録</string>
    <string name="mail_address">メールアドレス</string>
    <string name="password">パスワード(8文字以上16文字以下)</string>
    <string name="password_confirm">パスワード確認用</string>
    <string name="password_forgot">パスワードを忘れた場合は、\nメールアドレス入力欄にメールアドレスを入力し、\nこちらを押してください。</string>
    <string name="email_error">メールアドレスを正しく入力してください</string>
    <string name="password_error">パスワードを正しく入力してください</string>
    <string name="login_error">ログインに失敗しました。\nメールアドレス、パスワードを再確認してもう一度お試しください。</string>
    <string name="change_password_success">パスワード変更のためのメールをお送りしました。\nメールを確認してパスワードを変更してください。</string>
    <string name="change_password_error">パスワード変更のメールが送信できませんでした。\nメールアドレスを確認してもう一度押してください。</string>
    <string name="register_error">会員登録に失敗しました。\nメールアドレス、パスワードを再確認してもう一度お試しください。</string>
    <!--PersonalInformation -->
    <string name="name">名前</string>
    <string name="birthday">誕生日</string>
    <string name="birthday_hint">選択</string>
    <string name="next_title">続ける</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="name_error">名前を正しく入れてください</string>
    <string name="register_personal_info_error">プロフィールの保存に失敗しました。\nもう一度お試しください。</string>
    <!-- Profile -->
    <string name="from_label">出身</string>
    <string name="native_language">母語</string>
    <string name="learn_language">学ぶ言語</string>
    <string name="empty_hint">選択してください</string>
    <string name="start_learn">学習を始める</string>
    <string name="select_from_title">出身を選択してください</string>
    <string name="select_native_language_title">母語を選択してください</string>
    <string name="select_learn_language_title">学びたい言語を選択してください</string>
</resources>
