<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.andrew1121andy.firebasematching.viewmodel.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fromView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fromLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_label"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/empty_hint"
                android:text="@{viewModel.from.nameId}"
                android:textColor="@android:color/black"
                android:textColorHint="#666"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fromLabelTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#DDD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nativeLanguageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1">

            <TextView
                android:id="@+id/nativeLanguageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/native_language"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/empty_hint"
                android:text="@{viewModel.nativeLanguage.nameId}"
                android:textColor="@android:color/black"
                android:textColorHint="#666"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nativeLanguageTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#DDD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nativeLanguageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/learnLanguageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <TextView
                android:id="@+id/learnLanguageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_language"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/empty_hint"
                android:text="@{viewModel.learnLanguage.nameId}"
                android:textColor="@android:color/black"
                android:textColorHint="#666"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/learnLanguageTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#DDD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/learnLanguageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:enabled="@{viewModel.canSubmit}"
            android:onClick="@{() -> viewModel.saveProfile()}"
            android:text="@string/start_learn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>